* Added optional lz4 compression in commands *VTFILETRANSFER and *VTTUNNEL
* Added optional zstd compression in commands *VTFILETRANSFER and *VTTUNNEL
* Changed all encryption functions to use repackaged bouncycastle library
* Added SALSA as encryption algorithm
* Added HC as encryption algorithm
* Added ZUC as encryption algorithm
* Added THREEFISH as encryption algorithm
* Added *VTPAUSE command to pause local console for a interval or until enter
* Added *VTCONFIGURE command to reconfigure all server connection settings
* Added *VTREAD command to run text files commands in client console
* Added *VTLOG command to record client commands to local client file
* Added capability of SOCKS tunnels to also act as HTTP tunnels
* Added option to create FTP server tunnels in *VTTUNNEL command.
* Renamed various commands, check current commands with *VTHELP or *VTHL
* Changed license from GPLv3 license to MIT license

Changes since 1.4.1:

* Modified authentication protocol, backward compatibility broken
* Added snappy compression algorithm for some functions
* Added UPnP NAT port mapping support, with startup parameter
[connectionhost:]connectionport[/upnpnatport] and new command *VTUPNPNATPORT
* Added ping-heartbeat, see connection network delay with command *VTPING
* Added audio chat with command *VTAUDIOCHAT
* Added socks proxy tunnels with command *VTSOCKSTUNNELS
* Modified the video codec used in *VTREMOTEGRAPHICSMODE
* Renamed command *VTSETTUNNELS to *VTTCPTUNNELS
* Removed *VTLOCALZIPCREATE, *VTLOCALZIPSTORE and *VTZIPEXTRACT commands
* Modified *VTZIPCREATE, *VTZIPSTORE and *VTZIPEXTRACT commands
* Renamed *VTZIPCREATE command to *VTZIPCOMPRESS
* Modified AES 128 bit encryption transformation to CBC instead of CFB128
* Added *VTRESET command to temporarily override all credentials on server
* Added *VTSETSHELL command to change external native shell application
* Added connection helper form dialog for both server and client