@@ -2,7 +2,7 @@
 #Variable-Terminal client settings file, supports UTF-8
 #vate.client.connection.mode  values: default active(A), passive(P)
 #vate.client.proxy.type       values: DIRECT(D)/SOCKS(S)/HTTP(H)/PLUS(P)
-#vate.client.encryption.type  values: SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)
+#vate.client.encryption.type  values: SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)/LEA(L)
 #vate.client.session.commands format: cmd1*;cmd2*;cmd3*;...
 #
 vate.client.connection.mode=
