@@ -2,7 +2,7 @@
 #Variable-Terminal server settings file, supports UTF-8
 #vate.server.connection.mode  values: default passive(P), active(A)
 #vate.server.proxy.type       values: DIRECT(D)/SOCKS(S)/HTTP(H)/PLUS(P)
-#vate.server.encryption.type  values: SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)
+#vate.server.encryption.type  values: SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)/LEA(L)
 #vate.server.session.accounts format: user1/password1;user2/password2;...
 #
 vate.server.connection.mode=
