@@ -60,6 +60,7 @@ public class VTSystem
   public static final int VT_CONNECTION_ENCRYPTION_HC = 2;
   public static final int VT_CONNECTION_ENCRYPTION_ZUC = 3;
   public static final int VT_CONNECTION_ENCRYPTION_THREEFISH = 4;
+  public static final int VT_CONNECTION_ENCRYPTION_LEA = 5;
   
   public static final int VT_FILE_TRANSFER_STATUS_INEXISTENT = 0;
   public static final int VT_FILE_TRANSFER_STATUS_NORMAL = 1;
@@ -150,6 +151,7 @@ public class VTSystem
   public static final String VT_CONNECTION_ENCRYPTION_HC_STRING = "HC";
   public static final String VT_CONNECTION_ENCRYPTION_ZUC_STRING = "ZUC";
   public static final String VT_CONNECTION_ENCRYPTION_THREEFISH_STRING = "THREEFISH";
+  public static final String VT_CONNECTION_ENCRYPTION_LEA_STRING = "LEA";
   
   private static final DateFormat VT_ERA_DATEFORMAT;
   private static final Calendar VT_YEAR_CALENDAR;
