@@ -75,7 +75,7 @@ public class VTClient implements Runnable
   "Variable-Terminal client settings file, supports UTF-8\r\n" + 
   "#vate.client.connection.mode  values: default active(A), passive(P)\r\n" + 
   "#vate.client.proxy.type       values: DIRECT(D)/SOCKS(S)/HTTP(H)/PLUS(P)\r\n" + 
-  "#vate.client.encryption.type  values: SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)\r\n" + 
+  "#vate.client.encryption.type  values: SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)/LEA(L)\r\n" + 
   "#vate.client.session.commands format: cmd1*;cmd*;cmd3*;...\r\n";
   
   static
@@ -1777,7 +1777,7 @@ public class VTClient implements Runnable
         }
         if (line.toUpperCase().startsWith("Y"))
         {
-          VTMainConsole.print("VT>Enter encryption type(SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)):");
+          VTMainConsole.print("VT>Enter encryption type(SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)/LEA(L)):");
           line = VTMainConsole.readLine(false);
           if (line == null)
           {
@@ -1800,10 +1800,10 @@ public class VTClient implements Runnable
           {
             encryptionType = "THREEFISH";
           }
-//          if (line.toUpperCase().startsWith("G"))
-//          {
-//            encryptionType = "GRAIN";
-//          }
+          if (line.toUpperCase().startsWith("L"))
+          {
+            encryptionType = "LEA";
+          }
           VTMainConsole.print("VT>Enter encryption password:");
           line = VTMainConsole.readLine(false);
           if (line == null)
