@@ -121,7 +121,7 @@ client.*vtsetting:\
 \u000AVT>With NAME as PP set proxy host port\
 \u000AVT>With NAME as PU set proxy user\
 \u000AVT>With NAME as PK set proxy password\
-\u000AVT>With NAME as ET set encryption type(NONE/SALSA/HC/ZUC/THREEFISH)\
+\u000AVT>With NAME as ET set encryption type(NONE/SALSA/HC/ZUC/THREEFISH/LEA)\
 \u000AVT>With NAME as EK set encryption password\
 \u000AVT>With NAME as PL set ping limit in milliseconds\
 \u000AVT>With NAME as PI set ping interval in milliseconds\
@@ -145,7 +145,7 @@ client.*vtse:\
 \u000AVT>With NM as PP set proxy host port\
 \u000AVT>With NM as PU set proxy user\
 \u000AVT>With NM as PK set proxy password\
-\u000AVT>With NM as ET set encryption type(NONE/SALSA/HC/ZUC/THREEFISH)\
+\u000AVT>With NM as ET set encryption type(NONE/SALSA/HC/ZUC/THREEFISH/LEA)\
 \u000AVT>With NM as EK set encryption password\
 \u000AVT>With NM as PL set ping limit in milliseconds\
 \u000AVT>With NM as PI set ping interval in milliseconds\
@@ -906,7 +906,7 @@ server.*vtsetting:\
 \u000AVT>With NAME as PP set proxy host port\
 \u000AVT>With NAME as PU set proxy user\
 \u000AVT>With NAME as PK set proxy password\
-\u000AVT>With NAME as ET set encryption type(NONE/SALSA/HC/ZUC/THREEFISH)\
+\u000AVT>With NAME as ET set encryption type(NONE/SALSA/HC/ZUC/THREEFISH/LEA)\
 \u000AVT>With NAME as EK set encryption password\
 \u000AVT>With NAME as PL set ping limit in milliseconds\
 \u000AVT>With NAME as PI set ping interval in milliseconds\
@@ -930,7 +930,7 @@ server.*vtse:\
 \u000AVT>With NM as PP set proxy host port\
 \u000AVT>With NM as PU set proxy user\
 \u000AVT>With NM as PK set proxy password\
-\u000AVT>With NM as ET set encryption type(NONE/SALSA/HC/ZUC/THREEFISH)\
+\u000AVT>With NM as ET set encryption type(NONE/SALSA/HC/ZUC/THREEFISH/LEA)\
 \u000AVT>With NM as EK set encryption password\
 \u000AVT>With NM as PL set ping limit in milliseconds\
 \u000AVT>With NM as PI set ping interval in milliseconds\
