@@ -89,7 +89,7 @@ public class VTServer implements Runnable
   "Variable-Terminal server settings file, supports UTF-8\r\n" + 
   "#vate.server.connection.mode  values: default passive(P), active(A)\r\n" + 
   "#vate.server.proxy.type       values: DIRECT(D)/SOCKS(S)/HTTP(H)/PLUS(P)\r\n" + 
-  "#vate.server.encryption.type  values: SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)\r\n" + 
+  "#vate.server.encryption.type  values: SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)/LEA(L)\r\n" + 
   "#vate.server.session.accounts format: user1/password1;user2/password2;...\r\n";
   
   static
@@ -1858,7 +1858,7 @@ public class VTServer implements Runnable
         }
         if (line.toUpperCase().startsWith("Y"))
         {
-          VTMainConsole.print("VT>Enter encryption type(SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)):");
+          VTMainConsole.print("VT>Enter encryption type(SALSA(S)/HC(H)/ZUC(Z)/THREEFISH(T)/LEA(L)):");
           line = VTMainConsole.readLine(false);
           if (line == null)
           {
@@ -1881,10 +1881,10 @@ public class VTServer implements Runnable
           {
             encryptionType = "THREEFISH";
           }
-//          if (line.toUpperCase().startsWith("G"))
-//          {
-//            encryptionType = "GRAIN";
-//          }
+          if (line.toUpperCase().startsWith("L"))
+          {
+            encryptionType = "LEA";
+          }
           VTMainConsole.print("VT>Enter encryption password:");
           line = VTMainConsole.readLine(false);
           if (line == null)
