@@ -91,6 +91,7 @@ simple, medium, next, extra, high, vast, ultra, true
 * Added HC as encryption algorithm
 * Added ZUC as encryption algorithm
 * Added THREEFISH as encryption algorithm
+* Added LEA as encryption algorithm
 * Added *VTPAUSE command to pause local console for a interval or until enter
 * Added *VTCONFIGURE command to reconfigure all server connection settings
 * Added *VTREAD command to run text files commands in client console
